[tool.poetry]
name = "rules_validations"
version = "0.1.0"
description = ""
authors = ["Gianfranco Cossani <gianfranco.cossani@applydigital.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
pydantic = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
